# tnt.musicplayer

./: .gitattributes  .gitignore  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/trippntechnology/tntmusicplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  tagger.cpp
app/src/main/cpp/Files/: AudioFile.cpp  AudioFile.h  Mp3File.cpp  Mp3File.h
app/src/main/cpp/Sqlite/: SqlHelper.cpp  SqlHelper.h
app/src/main/cpp/Tags/: ID3Tag.cpp  ID3TagV2.cpp  ID3TagV2.h  Tag.cpp  Tag.h
app/src/main/cpp/audioclasses/base/: AudioFile.cpp  AudioFile.h  Tag.cpp  Tag.h
app/src/main/cpp/audioclasses/mp3/files/: Mp3File.cpp  Mp3File.h
app/src/main/cpp/audioclasses/mp3/tags/: ID3Tag.cpp  ID3Tag.h
app/src/main/cpp/baseclass/: AudioFile.h  Tag.h
app/src/main/cpp/database/: SqlHelper.cpp  SqlHelper.h  SqlWrapper.cpp  SqlWrapper.h
app/src/main/cpp/tagger/: tagger.cpp
app/src/main/cpp/tagger/files/: AudioFile.cpp  AudioFile.h  Mp3File.cpp  Mp3File.h
app/src/main/cpp/tagger/tags/: ID3Tag.cpp  ID3Tag.h  Tag.cpp  Tag.h
app/src/main/cpp/tntplayer/: TNTAudioEngine.cpp  TNTAudioEngine.h  TNTAudioPlayer.cpp  TNTAudioPlayer.h  player.cpp
app/src/main/cpp/utils/: logging_macros.h
app/src/main/java/com/trippntechnology/tntmusicplayer/: MainActivity.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/activites/mainactivity/: MainActivity.kt  MainViewModel.kt  SongListViewAdapter.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/binding/: CustomBinders.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/dialogs/: LiveDataObserverDialog.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/dialogs/dialogcomponents/: LiveDataObserverDialog.kt  LiveDataObserverDialogFragment.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/dialogs/edittagdialog/: EditTagDialog.kt  EditTagDialogViewModel.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/dialogs/scanningdialog/: ScanningDialog.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/glideutils/: GlideModule.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/injector/: App.kt  AppComponent.kt  AppModule.kt  AssistedModule.kt  Injector.kt  ViewModelFactory.kt  ViewModelKey.java  ViewModelKey.kt  ViewModelModule.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/log/: DebugTree.kt  ReleaseTree.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/nativewrappers/: PlayerLib.kt  TaggerLib.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/network/coverartretriever/: CoverArtRetriever.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/network/jsonreader/: CoverArtJsonReader.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/objects/: AudioFile.kt  XMLAlbum.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/util/: CoroutineContextProvider.kt  LiveDataObserverActivity.kt  SingleLiveEvent.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/viewmodelcomponents/: BaseAndroidViewModel.kt  BaseViewModel.kt
app/src/main/java/com/trippntechnology/tntmusicplayer/widgets/: ScanningDialog.kt
app/src/main/res/drawable/: dialog_shape.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_main_nav.xml  dialog_directory_scanning.xml  dialog_edit_tag.xml  dialog_progress_indicator.xml  fragment_audio_file_list.xml  fragment_edit_tag.xml  list_item_audio_file.xml  list_item_full_song_info.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/test/java/com/trippntechnology/tntmusicplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
oboe/: CMakeLists.txt
tntbaseutils/: build.gradle  tntbaseutils-release.aar
(+20 files in other folders)
